--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "BeetrootPortfolio",
   "version": "0.0.0",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js"
+    "test": "karma start ClientApp/test/karma.conf.js",
+     "webpack-dev": "set NODE_ENV=development && webpack",
+    "webpack-production": "set NODE_ENV=production && webpack",
+    "build-dev": "npm run webpack-dev",
+    "build-production": "npm run ngc && npm run webpack-production",
+    "watch-webpack-dev": "set NODE_ENV=development && webpack --watch --color",
+    "watch-webpack-production": "npm run build-production --watch --color"
   },
   "dependencies": {
     "@angular/common": "^2.4.5",
