--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+
+    // For security reasons values should be in appsettings.private.json or as environmental variables.
+    "databaseEndpoint": "",
+    "databaseKey": "",
+    "databaseId": "",
+    "collectionId": ""
 }
