Changed added passing apiKey for creating projects

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,7 @@
     },
 
     // For security reasons values should be in appsettings.private.json or as environmental variables.
+    "apiKey": "",
     "databaseEndpoint": "",
     "databaseKey": "",
     "databaseId": "",
