--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,12 @@
     },
 
     // For security reasons values should be in appsettings.private.json or as environmental variables.
-    "apiKey": "",
-    "databaseEndpoint": "",
-    "databaseKey": "",
-    "databaseId": "",
-    "collectionId": ""
+    "PortfolioSettings": {
+        "DatabaseType": "MongoDB",
+        "ApiKey": "",
+        "DatabaseEndpoint": "",
+        "DatabaseKey": "",
+        "DatabaseId": "",
+        "CollectionId": ""
+    }
 }
