Added personal info and loading icon

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
         "DatabaseEndpoint": "",
         "DatabaseKey": "",
         "DatabaseId": "",
+        "InfoId": "",
         "CollectionId": ""
     }
 }
